--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,7 @@
 @import "_fonts";
 
 @import "_common.scss";
+@import "_vertical-menu.scss";
 @import "_header";
 @import "section-one";
 @import "section-two";
