--- a/app/styles/_section-five.scss
+++ b/app/styles/_section-five.scss
@@ -7,42 +7,61 @@
   &__wrap {
     display: flex;
     flex-direction: row;
+    max-height: 100%;
   }
 
   &__title {
-    margin-bottom: 15px;
+    margin-bottom: 12px;
+    letter-spacing: 0;
   }
 
   &__subtitle {
     max-width: 350px;
     margin: 0 auto;
-    margin-bottom: 25px;
+    margin-bottom: 17px;
+  }
+
+  &__text-one {
+    text-indent: 4px;
+    margin-bottom: 20px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__text {
+    margin-bottom: 20px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__image-one,
+  &__image-two {
+    max-height: 100%;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &__image-one {
-    width: 756px;
-    height: 714px;
-    img {
-      width: 100%;
-      height: 100%;
-      display: inline-block;
-    }
+    max-width: 750px;
   }
 
   &__image-two {
-    width: 390px;
-    height: 712px;
-    img {
-      width: 100%;
-      height: 100%;
-      display: inline-block;
-    }
+    max-width: 390px;
   }
 
   &__content {
     max-width: 780px;
-    padding: 95px 100px 0;
+    padding: 95px 105px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // padding: 95px 90px 136px 50px;
     text-align: center;
+    // margin: 0 90px 0 50px;
   }
 }
 
