--- a/app/styles/_section-four.scss
+++ b/app/styles/_section-four.scss
@@ -2,7 +2,8 @@
   padding: 90px 0 0;
 
   &__title-wrap {
-    margin-bottom: 35px;
+    margin-left: 11px;
+    margin-bottom: 42px;
   }
 
   &__content {
@@ -12,7 +13,7 @@
   }
 
   &__content-title {
-    margin-bottom: 25px;
+    margin-bottom: 13px;
   }
 
   &__point {
@@ -20,8 +21,17 @@
     flex-direction: row;
   }
 
-  &__numbers-wrap {
-    margin-right: 10px;
+  .number-one {
+    margin-right: 24px;
+  }
+
+  .number-two {
+    margin-right: 18px;
+    margin-left: -7px;
+  }
+
+  .number-three {
+    margin-right: 18px;
   }
 
   &__content-wrap {
