--- a/app/styles/_section-six.scss
+++ b/app/styles/_section-six.scss
@@ -1,7 +1,7 @@
 @import "_vars";
 
 .section-comment {
-  padding: 80px 0 0;
+  padding: 80px 0 60px;
 
   &__title-wrap {
     margin-bottom: 55px;
@@ -14,13 +14,18 @@
   &__card {
     max-width: 325px;
     text-align: center;
+    margin-right: 1px;
+  }
+
+  .margin-non {
+    margin: 0;
   }
 
   &__avatar {
-    width: 150px;
-    height: 150px;
+    max-width: 142px;
+    max-height: 135px;
     margin: 0 auto;
-    margin-bottom: 35px;
+    margin-bottom: 46px;
     img {
       width: 100%;
       height: 100%;
@@ -28,15 +33,25 @@
   }
 
   &__name {
-    margin-bottom: 25px;
+    margin-bottom: 15px;
   }
 
   &__comment {
-    margin-bottom: 35px;
+    margin-bottom: 32px;
   }
 
   &__address {
     margin-bottom: 40px;
+  }
+
+  &__imag {
+    max-width: 40px;
+    max-height: 25px;
+    margin: 0 auto;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
