--- a/app/styles/_section-three.scss
+++ b/app/styles/_section-three.scss
@@ -5,24 +5,57 @@
   background-color: $gray-two;
 
   &__title-wrap {
-    margin-bottom: 52px;
+    margin-bottom: 49px;
   }
 
   &__title {
-    max-width: 475px;
-    font-weight: $bold;
+    font-weight: $regular;
     line-height: 47px;
-    letter-spacing: 2px;
+    letter-spacing: 0.7px;
+    text-indent: -36px;
+    padding-left: 36px;
+  }
+
+  &__subtitle {
+    word-spacing: 1.9px;
+    margin-bottom: 15px;
   }
 
   &__icon {
     width: 40px;
     height: 36px;
     display: flex;
-    font-size: 25px;
+    font-size: 34px;
     align-items: center;
     justify-content: center;
     margin-right: 20px;
+    margin-top: 5px;
+    color: $icon-section-three;
+  }
+
+  .item-one {
+    font-size: 40px;
+  }
+
+  .item-two {
+    margin-left: -4px;
+    margin-top: 2px;
+  }
+
+  .item-four {
+    margin-left: 4px;
+    margin-right: 16px;
+  }
+
+  .item-five {
+    margin-left: -3px;
+  }
+
+  .item-six {
+    font-size: 49px;
+    margin-right: 4px;
+    margin-right: 15px;
+    margin-top: 2px;
   }
 
   .indent {
@@ -44,8 +77,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-right: 105px;
-    margin-bottom: 77px;
+    margin-right: 120px;
+    margin-bottom: 66px;
 
     &:nth-child(3) {
       margin-right: 0;
