--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -5,12 +5,13 @@ $gray: #f1f1f1;
 $gray-two: #f8f8f8;
 $light-gray: #959595;
 $nav-hover: #b1d4d6;
+$icon-section-three: #bbd9da;
 
 //font-familt
 $myriad-pro: "Myriad Pro";
 $aleo: "Aleo";
 $roboto: "Roboto";
-$abril-fatface: "Abril Fatface";
+$abril-fatface: "AbrilFatface";
 
 //font-waight
 $bold: bold;
