--- a/app/libs/icomoon.css
+++ b/app/libs/icomoon.css
@@ -34,6 +34,9 @@
 .icon-search:before {
   content: "\e902";
 }
+.icon-hamburger:before {
+  content: "\e909";
+}
 .icon-close:before {
   content: "\e908";
 }
