--- a/app/styles/_section-five.scss
+++ b/app/styles/_section-five.scss
@@ -6,8 +6,8 @@
 
   &__wrap {
     display: flex;
-    flex-direction: row;
     max-height: 100%;
+    justify-content: center;
   }
 
   &__title {
@@ -42,6 +42,7 @@
     img {
       width: 100%;
       height: 100%;
+      object-fit: cover;
     }
   }
 
@@ -59,9 +60,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    // padding: 95px 90px 136px 50px;
     text-align: center;
-    // margin: 0 90px 0 50px;
   }
 }
 
