--- a/app/styles/_section-three.scss
+++ b/app/styles/_section-three.scss
@@ -9,7 +9,7 @@
   }
 
   &__title {
-    font-weight: $regular;
+    max-width: 450px;
     line-height: 47px;
     letter-spacing: 0.7px;
     text-indent: -36px;
@@ -53,7 +53,6 @@
 
   .item-six {
     font-size: 49px;
-    margin-right: 4px;
     margin-right: 15px;
     margin-top: 2px;
   }
