--- a/app/styles/_vertical-menu.scss
+++ b/app/styles/_vertical-menu.scss
@@ -17,6 +17,7 @@
     height: 100%;
     z-index: 10;
     background-color: $white;
+    overflow-y: scroll;
   }
 
   &__content-wrap {
@@ -29,19 +30,25 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    padding: 95px 0 0;
+  }
+
+  &__user-name {
+    font-size: 27px;
+    margin-bottom: 8px;
+  }
+
+  &__link-item {
+    margin-bottom: 35px;
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   &__link {
     font-size: 30px;
-    margin-bottom: 45px;
-    transition: all 0.3s ease;
     &:last-child {
       margin: 0;
-    }
-    &:hover {
-      color: $light-gray;
     }
   }
 
@@ -49,6 +56,26 @@
     display: flex;
     justify-content: flex-end;
     padding: 20px 30px 0 0;
+  }
+
+  &__link,
+  &__logout,
+  .btn-nav-off {
+    transition: all 0.3s ease;
+  }
+
+  &__link,
+  .btn-nav-off {
+    &:hover {
+      color: $light-gray;
+    }
+  }
+
+  &__logout {
+    font-size: 17px;
+    &:hover {
+      color: $black;
+    }
   }
 
   .btn-nav-off {
@@ -59,10 +86,6 @@
     display: flex;
     align-items: center;
     color: $black;
-
-    &:hover {
-      color: red;
-    }
   }
 
   .menu-overlay {
@@ -85,5 +108,13 @@
 
   a {
     text-decoration: none;
+  }
+
+  ul {
+    margin: 0;
+    padding: 0;
+    li {
+      list-style: none;
+    }
   }
 }
