--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,3 +4,13 @@
 @import "_fonts";
 
 @import "_common.scss";
+@import "_vertical-menu.scss";
+@import "_header";
+@import "section-one";
+@import "section-two";
+@import "section-three";
+@import "section-four";
+@import "section-five";
+@import "section-six";
+@import "section-seven";
+@import "_footer";
