--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -6,6 +6,8 @@ $gray-two: #f8f8f8;
 $light-gray: #959595;
 $nav-hover: #b1d4d6;
 $icon-section-three: #bbd9da;
+$color-scroll-nav: #f6f6f5;
+$line-scroll-nav: #c5c5c3;
 
 //font-familt
 $myriad-pro: "Myriad Pro";
